Added release task to gulp. Added microdata.

--- a/src/views/contact/contact.tpl.html
+++ b/src/views/contact/contact.tpl.html
@@ -1,10 +1,10 @@
 <div class="contact">
     <h1 class="page-title">Contact</h1>
 
-    <ul>
-        <li><a title="email" class="contact-link" href="mailto:aaronchristopherw@gmail.com"><i class="fa fa-envelope-square"></i></a></li>
-        <li><a title="Linkedin Profile" class="contact-link" href="http://www.linkedin.com/in/aaronwillows"><i class="fa fa-linkedin-square"></i></a></li>
-        <li><a title="Github Profile" class="contact-link" href="https://github.com/s33r"><i class="fa fa-github-square"></i></a></li>
+    <ul itemscope itemtype="http://data-vocabulary.org/Person">
+        <li><a itemprop="email" title="email" class="contact-link" href="mailto:aaronchristopherw@gmail.com"><i class="fa fa-envelope-square"></i></a></li>
+        <li><a itemprop="url" title="Linkedin Profile" class="contact-link" href="http://www.linkedin.com/in/aaronwillows"><i class="fa fa-linkedin-square"></i></a></li>
+        <li><a itemprop="url" title="Github Profile" class="contact-link" href="https://github.com/s33r"><i class="fa fa-github-square"></i></a></li>
     </ul>
 
     <p class="contact-message"><i class="fa fa-arrow-up"></i> Please contact me using one of the above services! <i class="fa fa-arrow-up"></i> </p>
