--- a/src/views/home/home.less
+++ b/src/views/home/home.less
@@ -8,8 +8,6 @@
     bottom: 33%;
   }
 
-
-
   .name {
     padding-left: 25%;
     font-size: 2rem;
@@ -22,17 +20,10 @@
     padding-right: 25%;
   }
 
-  .middle {
-    text-align: center;
-  }
-
-
   .main-menu {
-
     text-align: center;
 
     background-color: black;
-//    background-color: @panelBackgroundColor;
 
     padding-bottom: .1rem;
     padding-top: .1rem;
@@ -61,6 +52,11 @@
   .home {
     position: static;
 
+    .name {
+      padding-left: 1rem;
+      font-size: 2rem;
+    }
+
     .hero-text {
       display: none;
     }
@@ -68,6 +64,7 @@
     .main-menu {
       text-align: left;
       padding-left: 1rem;
+
       li {
         display: block;
       }
