--- a/src/views/home/home.tpl.html
+++ b/src/views/home/home.tpl.html
@@ -1,15 +1,15 @@
 <div class="home">
 
-    <div class="menu-container">
-    <h1 class="name">Aaron Willows</h1>
+    <div class="menu-container" itemscope itemtype="http://data-vocabulary.org/Person">
+        <h1 class="name" itemprop="name">Aaron Willows</h1>
 
-    <ul class="main-menu">
-        <li><a class="nav-link" href="#/portfolio">Portfolio</a></li>
-        <li><a class="nav-link" href="#/resume">Resume</a></li>
-        <li><a class="nav-link" href="#/about">About</a></li>
-        <li><a class="nav-link" href="#/contact">Contact</a></li>
-    </ul>
+        <ul class="main-menu">
+            <li><a class="nav-link" href="#/portfolio">Portfolio</a></li>
+            <li><a class="nav-link" href="#/resume">Resume</a></li>
+            <li><a class="nav-link" href="#/about">About</a></li>
+            <li><a class="nav-link" href="#/contact">Contact</a></li>
+        </ul>
 
-    <p class="hero-text">Front End / JavaScript / UX Developer</p>
+        <p class="hero-text" itemprop="role">Front End / JavaScript / UX Developer</p>
     </div>
 </div>
