--- a/src/components/directives/navBar/navBar.less
+++ b/src/components/directives/navBar/navBar.less
@@ -43,11 +43,12 @@
     padding-left: 0;
   }
 
-  a {
+  .nav-link {
+    cursor: pointer;
     font-size: 1.5rem;
   }
 
-  a:hover {
+  .nav-link:hover {
     text-decoration: underline;
   }
 
@@ -89,6 +90,8 @@
       display: block;
       padding-bottom: .5rem;
     }
+
+
 
     .mobile-visible {
       display: block;
