--- a/src/views/fourohfour/fourohfour.tpl.html
+++ b/src/views/fourohfour/fourohfour.tpl.html
@@ -1,7 +1,7 @@
 <div class="fourohfour">
     <h1 class="page-title"><i class="fa fa-exclamation-circle"></i> 404 - Spooky... this page isn't really here.</h1>
     <p>
-        There's only like, 5 pages... <a class="important-link" href="#/"> <i class="fa fa-home"></i> Return Home</a>
+        There's only like, 5 pages... <a class="body-link" href="#/"> <i class="fa fa-home"></i> Return Home</a>
 
     </p>
 
