Now using html5 mode.

--- a/src/components/directives/navBar/navBar.tpl.html
+++ b/src/components/directives/navBar/navBar.tpl.html
@@ -1,5 +1,5 @@
 <div class="nav-bar">
-    <h1><a class="nav-link" href="#/">Aaron Willows</a></h1>
+    <h1><a class="nav-link" href="/">Aaron Willows</a></h1>
     <button class="mobile-menu-button" ng-click="toggleMobileMenu($event)"><i class="fa fa-bars"></i></button>
     <nav>
         <ul class="nav-menu" ng-class="{'mobile-visible': mobileMenuOpen}">
